[project]
name = "mtcli-renko"
version = "1.1.0.dev3"
description = "Renko plugin institucional para mtcli (MetaTrader 5)"
authors = [
    { name = "Valmir França", email = "vfranca3@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"

keywords = [
    "trading",
    "renko",
    "metatrader5",
    "mt5",
    "cli",
    "price-action"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "mtcli>=3.5.0",
    "click>=8.3.0,<9.0.0",
    "metatrader5>=5.0.5370,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/vfranca/mtcli-renko"
Repository = "https://github.com/vfranca/mtcli-renko"
Issues = "https://github.com/vfranca/mtcli-renko/issues"
Documentation = "https://vfranca.github.io/mtcli-renko"

[project.entry-points."mtcli.plugins"]
renko = "mtcli_renko.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
pytest-mock = "^3.15.1"
ruff = "^0.14.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mtcli", "mtcli_renko"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
